Changelog
=========

11.0-dev0 - (unreleased)
---------------------------

10.9 - (2020-01-10)
--------------------------
* Feature: added ability to display a message to logged in users and still
  show a related title with body for anonymous users in case no relations are
  added for a given possible relation
  [ichim-david refs #112068]

10.8 - (2019-08-19)
--------------------------
* Change: eea_relatedItems relatedItems macro album view now adds background
  image instead of image tag if image_thumb is not passed as thumb_scale variable
  [ichim-david refs #106884]

10.7 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

10.6 - (2018-08-27)
--------------------------
* Change: Get base-url from body data `base-url`
  [avoinea refs #97843]

10.5 - (2018-06-20)
--------------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

10.4 - (2018-05-30)
--------------------------
* Bug fix: Restrict getBRefs only to related items
  [avoinea refs #95796]

10.3 - (2018-04-17)
-------------------
* Change: removed green gradient from jquery ui
  [ichim-david refs #91590]

10.2 - (2018-03-14)
-------------------
* Change: add reference browser on jQuery dome ready
  [ichim-david refs #91577]

10.1 - (2017-12-12)
-------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]
* Change: Update tests to work with eea.facetednavigation 10.0+
  [avoinea refs #89955]
* Bug fix: fixed the issue preventing the existing relations being listed under edit.
  [alecghica refs #78945]
* Bug fix: fixed the default value for the eea_refs property, [] instead of ['']
  [alecghica refs #78945]

10.0 - (2017-11-07)
-------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

9.9 - (2017-08-16)
------------------
* Bug fix: fixed an exception in queryContentType when